# sit-stand-reminder

./: .gitignore  README.md  launch.py  pyproject.toml  setup.py  sit_stand_reminder.py  sit_stand_reminder.spec
.github/workflows/: main.yaml
sit_stand_reminder/: __init__.py  __main__.py  assets.py  audio.py  config.py  main.py  scheduler.py
sit_stand_reminder/ui/: __init__.py  dashboard.py  reminder.py  settings.py  style.py
tests/: __init__.py  test_assets.py  test_audio.py  test_config.py  test_main.py  test_scheduler.py
