[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sit-stand-reminder"
version = "0.0.14"
description = "A cross-platform reminder to alternate between sitting, standing, and walking"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["Pillow>=10.0.0"]

[project.scripts]
sit-stand-reminder = "sit_stand_reminder:reminder_loop"

[dependency-groups]
dev = ["pyinstaller>=6.0.0"]
