[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sit-stand-reminder"
version = "0.0.14"
description = "A cross-platform reminder to alternate between sitting, standing, and walking"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.0.0",
    "ttkbootstrap>=1.20.2",
]

[project.scripts]
sit-stand-reminder = "sit_stand_reminder.main:main"

[dependency-groups]
dev = ["pyinstaller>=6.0.0", "pytest>=8.0.0"]
